--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
                     We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </p>
                 <div class="row members-list">
-                    <div class="s-col-full col col-third text-center">
+                    <div class="s-col-full mt-16 col col-third text-center">
                         <p class="member-name">Name</p>
                         <img src="./assets/img/member/member.jpg" alt="" class="member-img">
                     </div>
-                    <div class="s-col-full col col-third text-center">
+                    <div class="s-col-full mt-16 col col-third text-center">
                         <p class="member-name">Name</p>
                         <img src="./assets/img/member/member.jpg" alt="" class="member-img">
                     </div>
-                    <div class="s-col-full col col-third text-center">
+                    <div class="s-col-full mt-16 col col-third text-center">
                         <p class="member-name">Name</p>
                         <img src="./assets/img/member/member.jpg" alt="" class="member-img">
                     </div>
@@ -84,7 +84,7 @@
                         <li>November <span class="quatity">3</span> </li>
                     </ul>
                     <div class="row places-list">
-                        <div class="col col-third">
+                        <div class="col col-third mt-16 s-col-full">
                             <img class= "place-img" src="assets/img/place/newyork.jpg" alt="New York">
                             <div class="place-body">
                                 <h3 class="place-heading">New York</h3>
@@ -93,7 +93,7 @@
                                 <button class="btn js-buy-ticket">Buy Tickets</button>
                             </div>
                             </div>
-                        <div class="col col-third">
+                        <div class="col col-third mt-16 s-col-full">
                             <img class= "place-img" src="assets/img/place/paris.jpg" alt="Paris">
                             <div class="place-body">
                                 <h3 class="place-heading">Paris</h3>
@@ -102,7 +102,7 @@
                                 <button class="btn js-buy-ticket">Buy Tickets</button>
                             </div>
                         </div>
-                        <div class="col col-third">
+                        <div class="col col-third mt-16 s-col-full">
                             <img class= "place-img" src="assets/img/place/sanfran.jpg" alt="San Francisco">
                             <div class="place-body">
                                 <h3 class="place-heading">San Francisco</h3>
