--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
     <link rel="stylesheet" href="./assets/fonts/themify-icons/themify-icons.css">
-    <title>Document</title>
+    <title>Band</title>
 </head>
 <body>
     <div id="main">
@@ -90,7 +90,7 @@
                                 <h3 class="place-heading">New York</h3>
                                 <p class="place-time">Fri 27 Nov 2016</p>
                                 <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <button class="btn js-buy-ticket">Buy Tickets</button>
+                                <button class="btn js-buy-ticket s-full-width">Buy Tickets</button>
                             </div>
                             </div>
                         <div class="col col-third mt-16 s-col-full">
@@ -99,7 +99,7 @@
                                 <h3 class="place-heading">Paris</h3>
                                 <p class="place-time">Sat 28 Nov 2016</p>
                                 <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <button class="btn js-buy-ticket">Buy Tickets</button>
+                                <button class="btn js-buy-ticket s-full-width">Buy Tickets</button>
                             </div>
                         </div>
                         <div class="col col-third mt-16 s-col-full">
@@ -108,7 +108,7 @@
                                 <h3 class="place-heading">San Francisco</h3>
                                 <p class="place-time">Sun 29 Nov 2016</p>
                                 <p class="place-desc">Praesent tincidunt sed tellus ut rutrum sed vitae justo.</p>
-                                <button class="btn js-buy-ticket">Buy Tickets</button>
+                                <button class="btn js-buy-ticket s-full-width">Buy Tickets</button>
                             </div>
                         </div>
                     </div>
@@ -120,18 +120,18 @@
                 <h2 class="section-heading">CONTACT</h2>
                 <p class="section-sub-heading">Fan? Drop a note!</p>
                 <div class="row contact-content">
-                    <div class="col col-half contact-info">
+                    <div class="col col-half s-col-full contact-info">
                         <p> <i class="ti-location-pin"></i> Chicago, US</p>
-                        <p> <i class="ti-mobile"></i> Phone: +00 151515</p>
-                        <p> <i class="ti-email"></i> Email: mail@mail.com</p>
+                        <p> <i class="ti-mobile"></i> <a href="tel:+00151515">Phone: +00 151515</a></p>
+                        <p> <i class="ti-email"></i> <a href="mailto:mail@mail.com">Email: mail@mail.com</a></p>
                     </div>
-                    <div class="col col-half contact-form">
+                    <div class="col col-half s-col-full contact-form">
                         <form action="">
                             <div class="row">
-                                <div class="col col-half">
+                                <div class="col col-half s-col-full">
                                     <input type="text" placeholder="Name" required class="form-control">
                                 </div>
-                                <div class="col col-half">
+                                <div class="col col-half s-col-full s-mt-8">
                                     <input type="email" placeholder="Email" required class="form-control">
                                 </div>
                             </div>
@@ -140,7 +140,7 @@
                                     <input type="text" placeholder="Message" required class="form-control">
                                 </div>
                             </div>
-                            <input class="mt-16 pull-right btn"type="submit" value="SEND">
+                            <input class="mt-16 pull-right btn s-full-width"type="submit" value="SEND">
                         </form>
                     </div>
                 </div>
